# kokkos-central

./: .gitignore  AGENTIC_KERNELS.md  CMakeLists.txt  ECAN_ATTENTION_ALLOCATION.md  HYPERGRAPH_IMPLEMENTATION.md  PROJECTROSTER.md  README.md  demo_attention.cpp  test_attention_main.cpp
Profile/: README.md
docs/: DACGN-RecursivePatterns.md  DACGN-TechnicalSpecs.md  DistributedAgenticCognitiveGrammarNetwork.md  README.md  validate_diagrams.py  validation_report.html  visual_test.py
kokkos/: comprehensive_demo  hypergraph_demo  hypergraph_demo.cpp  test_hypergraph.cpp  test_hypergraph_simple  test_hypergraph_simple.cpp  test_metacognitive  test_metacognitive_standalone.cpp
kokkos-comm/: .typos.toml  CMakeLists.txt
kokkos-comm/.github/workflows/: linux.yaml  osx.yaml  snl-at2.yaml  snl-h100.yaml
kokkos-comm/cmake/: Config.cmake.in  KokkosComm_config.hpp.in  mpi-vendor.cmake
kokkos-comm/docs/: index.rst
kokkos-comm/docs/dev/: docs.rst  mpi.rst
kokkos-comm/perf_tests/mpi/: test_2dhalo.cpp  test_main.cpp  test_osu_latency.cpp  test_sendrecv.cpp  test_utils.hpp
kokkos-comm/src/KokkosComm/: CMakeLists.txt  KokkosComm.hpp  concepts.hpp  fwd.hpp  traits.hpp
kokkos-comm/src/KokkosComm/mpi/: allgather.hpp  allreduce.hpp  alltoall.hpp  barrier.hpp  broadcast.hpp  comm_mode.hpp  handle.hpp  irecv.hpp  isend.hpp  mpi_space.hpp  recv.hpp  reduce.hpp  req.hpp  send.hpp
kokkos-comm/src/KokkosComm/mpi/impl/: pack_traits.hpp  packer.hpp  tags.hpp  types.hpp
kokkos-comm/unit_tests/: CMakeLists.txt  test_barrier.cpp  test_main.cpp  test_sendrecv.cpp
kokkos-comm/unit_tests/mpi/: test_allgather.cpp  test_allreduce.cpp  test_alltoall.cpp  test_broadcast.cpp  test_gtest_mpi.cpp  test_isendrecv.cpp  test_mpi_cuda_sendrecv.cpp  test_mpi_view_access.cpp  test_reduce.cpp  test_sendrecv.cpp
kokkos-docs/: README
kokkos-fft/docs/samples/: 07_unmanaged_views.rst
kokkos-fortran-interop/: CMakeLists.txt  README.md
kokkos-fortran-interop/examples/01-axpy-ndarray/: axpy-ndarray-f.f90
kokkos-fortran-interop/examples/02-axpy-dualview/: axpy-dualview-f.f90
kokkos-fortran-interop/examples/03-axpy-view/: axpy-view-f.f90
kokkos-fortran-interop/examples/04-complex-ndarray/: complex-ndarray-f.f90
kokkos-fortran-interop/src/: CMakeLists.txt  flcl-dualview-f.f90  flcl-util-cxx.cpp  flcl-util-cxx.h  flcl-util-kokkos-f.f90  flcl-util-strings-f.f90  flcl-view-f.f90
kokkos-fortran-interop/test/: CMakeLists.txt  flcl-test-f.F90  test_from_ndarray_c32_1d.f90  test_from_ndarray_c32_2d.f90  test_from_ndarray_c32_3d.f90  test_from_ndarray_c32_4d.f90  test_from_ndarray_c32_5d.f90  test_from_ndarray_c32_6d.f90  test_from_ndarray_c32_7d.f90  test_from_ndarray_c64_1d.f90  test_from_ndarray_c64_2d.f90  test_from_ndarray_c64_3d.f90  test_from_ndarray_c64_4d.f90  test_from_ndarray_c64_5d.f90  test_from_ndarray_c64_6d.f90  test_from_ndarray_c64_7d.f90  test_from_ndarray_i32_1d.f90  test_from_ndarray_i32_2d.f90  test_from_ndarray_i32_3d.f90  test_from_ndarray_i32_4d.f90  test_from_ndarray_i32_5d.f90  test_from_ndarray_i32_6d.f90  test_from_ndarray_i32_7d.f90  test_from_ndarray_i64_1d.f90  test_from_ndarray_i64_2d.f90  test_from_ndarray_i64_3d.f90  test_from_ndarray_i64_4d.f90  test_from_ndarray_i64_5d.f90  test_from_ndarray_i64_6d.f90  test_from_ndarray_i64_7d.f90  test_from_ndarray_l_1d.f90  test_from_ndarray_l_2d.f90  test_from_ndarray_l_3d.f90  test_from_ndarray_l_4d.f90  test_from_ndarray_l_5d.f90  test_from_ndarray_l_6d.f90  test_from_ndarray_l_7d.f90  test_from_ndarray_r32_1d.f90  test_from_ndarray_r32_2d.f90  test_from_ndarray_r32_3d.f90  (+130 more)
kokkos-remote-spaces/applications/cgsolve/rma/: CMakeLists.txt
kokkos-remote-spaces/applications/heat3d/opt_rma/: heat3d.cpp
kokkos-tools/: CMakeLists.txt
kokkos-tools/.github/workflows/: build-with-kokkos.yml
kokkos-tools/profiling/nvtx-connector/: CMakeLists.txt  Makefile  kp_nvtx_connector.cpp
kokkos-tools/profiling/nvtx-focused-connector/: CMakeLists.txt  Makefile  kp_nvtx_focused_connector.cpp  kp_nvtx_focused_connector_domain.h
kokkos-tools/profiling/perfetto-connector/perfetto/: perfetto.cc
kokkos/core/src/: Kokkos_AgenticKernel.hpp  Kokkos_AttentionAllocation.hpp  Kokkos_AttentionAwareParallelImpl.hpp  Kokkos_Core.hpp  Kokkos_HyperGraph.hpp  Kokkos_HyperGraph_ModuleMapper.hpp  Kokkos_HyperGraph_fwd.hpp
kokkos/core/src/impl/: Kokkos_MetaCognitiveMonitor.cpp  Kokkos_MetaCognitiveMonitor.hpp  Kokkos_Profiling.cpp  Kokkos_Profiling.hpp  Kokkos_Tools.hpp
kokkos/core/unit_test/: CMakeLists.txt  TestAttentionAllocation.hpp  TestHyperGraph.cpp  TestHyperGraph.hpp
kokkos/core/unit_test/tools/: TestMetaCognitiveMonitor.cpp
kokkos/docs/: MetaCognitiveMonitoring.md
kokkos/example/: comprehensive_metacognitive_demo.cpp  meta_cognitive_monitoring_demo.cpp
mdspan/.github/workflows/: cmake-windows.yml  cmake.yml  single-header.yml
mdspan/tests/: test_layout_padded_left.cpp  test_layout_padded_right.cpp
pykokkos/: test_agentic_simple.py
pykokkos-base/include/: libpykokkos.hpp
pykokkos/examples/: agentic_kernels_demo.py
pykokkos/pykokkos/agentic/: __init__.py  cognitive_optimizer.py  ggml_compatibility.py  kernel_dict.py  kernel_factory.py
pykokkos/tests/agentic/: test_agentic_kernels.py
test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
